--- a/src/shared/styles.css
+++ b/src/shared/styles.css
@@ -1,15 +1,12 @@
 @import url("tailwindcss/base.css");
-@import url("tailwindcss/components.css");
-@import url("tailwindcss/utilities.css");
 
 body {
-	@apply font-sans text-base;
+    @apply font-sans text-base;
 }
 
-.button {
-	@apply rounded-lg bg-bookstoreBlue hover:bg-bookstoreBlue/90 px-4 py-2 text-white smooth;
-}
+@import url("tailwindcss/components.css");
 
-.smooth {
-	@apply transition duration-200 ease-in-out;
-}
+@import url("components/label/label.css");
+@import url("components/button/button.css");
+
+@import url("tailwindcss/utilities.css");
