feat: add basic input component

--- a/src/shared/styles.css
+++ b/src/shared/styles.css
@@ -8,5 +8,6 @@ body {
 
 @import url("components/label/label.css");
 @import url("components/button/button.css");
+@import url("components/input/input.css");
 
 @import url("tailwindcss/utilities.css");
